# foundry

./: .gitignore  AGENTS.md  README.md  build.py  dev.bat  dev.sh  opencode-tui-style-guide.md  uv.toml
foundry/: pyproject.toml
foundry/dream_foundry/: __main__.py  config.py  main.py  yaml_config.py
foundry/dream_foundry/agent/: context.py  core.py  memory.py  registry.py  tools.py
foundry/dream_foundry/api/: memory.py  models.py  sessions.py  sse.py  ws.py
foundry/dream_foundry/db/: crud.py  database.py
foundry/dream_foundry/schemas/: memory.py
foundry/foundry_app/: __main__.py  config.py  logger.py  main.py  shared_protocol.py  yaml_config.py
foundry/foundry_app/agent/: compaction.py  context.py  core.py  factory.py  memory.py  overflow.py  question.py  question_tools.py  registry.py  subagent.py  subagent_tools.py  system_prompt.py  title.py  todo_tools.py  tools.py
foundry/foundry_app/api/: compact.py  memory.py  models.py  sessions.py  sse.py  ws.py
foundry/foundry_app/chat/: __init__.py  orchestrator.py  title.py
foundry/foundry_app/db/: crud.py  database.py  models.py
foundry/foundry_app/model/: __init__.py  client.py  registry.py
foundry/foundry_app/schemas/: chat.py  session.py
foundry/foundry_app/session/: __init__.py  compaction.py
tui/: package.json  pyproject.toml  tsconfig.json
tui/src/: App.tsx  api.ts  app.py  commands.ts  index.tsx  persistence.ts  store.ts  styles.tcss  theme.ts  types.ts  utils.ts  ws.ts
tui/src/components/: ChatArea.tsx  ContextPanel.tsx  Footer.tsx  Header.tsx  InputBar.tsx  MessageBubble.tsx  (+4 more)
(+100 files in other folders)
