[project]
name = "foundry"
version = "0.1.0"
description = "Dream Foundry AI Agent Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-ai>=0.2",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "websockets>=13.0",
    "sse-starlette>=2.0",
    "openai>=1.0",
    "anthropic>=0.40",
    "pydantic-settings>=2.0",
    "sqlite-vec>=0.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dream_foundry"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
