[project]
name = "dream-foundry-tui"
version = "0.1.0"
description = "Dream Foundry TUI Frontend"
requires-python = ">=3.10"
dependencies = [
    "textual>=3.0",
    "rich>=13.0",
    "pygments>=2.17",
    "websockets>=13.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
